# AgentSmith

./: .gitignore  CHANGELOG.md  DemoScript.md  FIXES_AND_CLEANUP.md  OPERATIONS.md  Product_Archive.md  README.md  Readme.md  ReviewFindings-2026-07-18.md  SPECS.md  TRADEMARK.md  TestCoverageReview-2026-07-21.md  TestbedFeedback-2026-07-21.md  UserManual.md  docker-compose.auth.yml  docker-compose.yml  install-ai-stack.sh  pyproject.toml  pytest.ini  requirements.txt
.agent-rfc/fixtures/: knowledge_graph.json
.agent-rfc/security/: nist_profile.yaml  risk_register.yaml  tool_allowlist.yaml
.claude/: settings.json
.github/workflows/: cd-portal.yml  release.yml  self-test.yml
.obsidian/: workspace.json
caddy/: Caddyfile
docs/: delivery-model.md  iso-42001-control-map.md  rag-memory.md  security-framework-map.md  team-observability.md  testbed-tenant-spec.md  uae-regulatory.md
docs/archive/: specs-update.md
docs/session-handoff/: 2026-07-15-security-compliance-harness.md  2026-07-21-testbed-and-hardening.md
enterprise/: README.md  agenticframework-org.yaml.example  mdm-deploy-hooks.sh  package-hook-bundle.sh
examples/: README.md
examples/oil-price-agent/: Dockerfile  check_model_ids.py  resolve_hitl.py  test_model.py  trigger_workflow.py  worker.py
fixtures/: custom_judge_criteria_base.json  fairness_evals_base.json  fairness_judge_criteria_base.json  golden_evals_base.json  hallucination_evals_base.json  hallucination_judge_criteria_base.json
fixtures/security/: adversarial_evals_base.json  atlas_technique_map.json  control_registry.json  pii_probe_cases_base.json  prompt_injection_cases_base.json
hooks/: commit-msg  post-checkout  post-commit  pre-commit
init-db/: 01-create-agenticframework-db.sh
portal/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
portal/app/: globals.css  layout.tsx  page.tsx
portal/components/: CostChart.tsx  DlqEntryCard.tsx
portal/db/: schema.sql
portal/lib/: auditLog.ts  authz.ts  cost.ts  db.ts  dlq.ts  isolation.ts  issues.ts  oidc.ts  phoenix.ts  promotions.ts  runStatus.ts  sessionRevocation.ts  sessionToken.ts  ssoRevocationMode.ts  tenants.ts  widgetTokens.ts
portal/scripts/: migrate.ts
portal/test/: auditLog.test.ts  authz.test.ts  dlqCostWidget.test.ts  phoenix.test.ts  ssoRevocation.test.ts  (+1 more)
runtime/: __init__.py  conversation_memory.py  dead_letter.py  embeddings.py  environment.py  idempotency.py  input_guardrail.py  judging.py  llm_gateway.py  luhn.py  models.yaml  moderation.py  pg_pool.py  prompt_guard.py  provider_dispatch.py  replay_webhook_server.py  requirements-runtime.txt  self_correction.py  structured_output.py  temporal_replay.py  testing.py  tool_registry.py  trace_redactor.py  tracing.py  vector_store.py  worker.py
scripts/: _shared.py  agent_logger.py  check_bare_except.py  circuit_breaker.py  cost_router.py  delivery_evidence.py  delivery_model.py  eval_judge.py  generate-ide-config.py  local_agent_stack.py  local_knowledge_graph.py  map_codebase.py  multi_agent_system.py  network_watchdog.py  notifier.py  promote-learning.py  run-evals.py  run-security-checks.py  shadow-eval.py  sync-portal-history.py  sync-ui-feedback.py  verify_sovereign_endpoint.py  verify_system.py  verify_ttft.py
templates/: agent-rules.yaml
workflow-templates/: cd-production.yml  cd-staging.yml  ci-go.yml  ci-python-fastapi.yml  ci-ts-react.yml  eval-fairness.yml  eval-hallucination.yml  eval-scorecard.yml  eval-security.yml  eval-ttft-live.yml  shadow-eval.yml
(+138 files in other folders)
